[package]
name = "tariff"
version = "0.1.0"
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
repository = "https://github.com/saghm/tariff"
description = "A MongoDB import/export tool written in Rust as a proof-of-concept for the experimental Rust driver."
license = "MIT"
keywords = ["mongo", "mongodb", "import", "export", "json"]

[dependencies]
bson = "0.1.3"
docopt = "0.6.70"
rustc-serialize = "0.3.15"

[dependencies.mongodb]
git = "https://github.com/mongodbinc-interns/mongo-rust-driver-prototype"
branch = "1.0"
