[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "A MongoDB import/export tool"
keywords = ["mongo", "mongodb", "import", "export", "json"]
license = "MIT"
name = "tariff"
repository = "https://github.com/saghm/tariff"
version = "0.2.0"

[[bin]]
name = "tariff"

[dependencies]
bson = "0.6.0"
chrono = "0.2.0"
hex = "0.2.0"
mongodb = "0.2.3"
serde_yaml = "0.6.2"
